--- a/index.html
+++ b/index.html
@@ -8,24 +8,26 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>An interactive Basketball-Scoreboard App</h1>
-    <div class="split">
-        <div>
-            <h1>HOME</h1>
-            <div id="home" class="black-bg">0</div>
-            <button type="button" onclick="homeScoreOne()">+1</button>
-            <button type="button" onclick="homeScoreTwo()">+2</button>
-            <button type="button" onclick="homeScoreThree()">+3</button>
+    <div class="container">
+        <h1>An interactive Basketball-Scoreboard App</h1>
+        <div class="split">
+            <div>
+                <h1>HOME</h1>
+                <div id="home" class="black-bg">0</div>
+                <button type="button" onclick="homeScoreOne()">+1</button>
+                <button type="button" onclick="homeScoreTwo()">+2</button>
+                <button type="button" onclick="homeScoreThree()">+3</button>
+            </div>
+            <div>
+                <h1>GUEST</h1>
+                <div id="guest" class="black-bg">0</div>
+                <button type="button" onclick="guestScoreOne()">+1</button>
+                <button type="button" onclick="guestScoreTwo()">+2</button>
+                <button type="button" onclick="guestScoreThree()">+3</button>
+            </div>
         </div>
-        <div>
-            <h1>GUEST</h1>
-            <div id="guest" class="black-bg">0</div>
-            <button type="button" onclick="guestScoreOne()">+1</button>
-            <button type="button" onclick="guestScoreTwo()">+2</button>
-            <button type="button" onclick="guestScoreThree()">+3</button>
-        </div>
+        <button type="button" onclick="reset()" class="reset">RESET</button>
     </div>
-    <button type="button" onclick="reset()" class="reset">RESET</button>
 
     <script src="./index.js"></script>
 </body>
